Feature ETP-1529: Help, description and refactored class